need to add auto numbering

--- a/_posts/2015-3-23-graph-sparsifiers.html
+++ b/_posts/2015-3-23-graph-sparsifiers.html
@@ -59,39 +59,53 @@ excerpt: The running time of many graph algorithms depends on the number of edge
       <h3 class = "sec"> Some definitions </h3>
         <ul> 
           <li>
-            <b>Incidence Matrix</b> For an undirected graph \(G\), let \(B\) of size \(|E| \times |V|\) be the incidence matrix where \(B_{e, v} = 1\) if \(e\) starts from \(v\) and \(B_{e, u} = -1\) if \(e\) ends at \(u\). ( The direction is random for an undirected graph )
+            <div class = "definition">
+              <b>Incidence Matrix</b> For an undirected graph \(G\), let \(B\) of size \(|E| \times |V|\) be the incidence matrix where \(B_{e, v} = 1\) if \(e\) starts from \(v\) and \(B_{e, u} = -1\) if \(e\) ends at \(u\). ( The direction is random for an undirected graph )
+            </div>
           </li>
           <li>
-            <b>Graph Laplacian</b> \(L = B^T B = D - A\) 
-            There are several properties of graph Laplacian
-            <ul>
-              <li>\(x^T L x = x^T B^T B x = \sum_{(u, v) \in E} (x_u - x_v)^ 2\)</li>
-              <li>For a connected graph, \(\ker(L) = \ker(B) = span(1)\) and thus \(rank(L) = n - 1\)</li>
-              <li>\(L\) is symmetric, semi-definite</li>
-              <li>Define the pseudoinverse of \(L\) as \(L ^ + \). \(L = \sum_{i = 1}^{n - 1} \lambda_i u_i u_i ^ T\), then 
-                \(L^ + = \sum_{i = 1}^{n - 1} \frac{1}{\lambda_i} u_i u_i ^ T\).</li>
-              <li> \(L ^ + L = L L ^ + = \sum_{i = 1}^{n - 1} u_i u_i ^ T\). PROJECTION onto the span of the nonzero eigenvectors of \(L\). \(LL^+\) is identity on \(img(L) = img(L^+) = span(1) ^ \perp\) </li>
-            </ul>
+            <div class = "definition" >
+              <b>Graph Laplacian</b> \(L = B^T B = D - A\) 
+            </div>
+            <div>
+              There are several properties of graph Laplacian
+              <ul>
+                <li>\(x^T L x = x^T B^T B x = \sum_{(u, v) \in E} (x_u - x_v)^ 2\)</li>
+                <li>For a connected graph, \(\ker(L) = \ker(B) = span(1)\) and thus \(rank(L) = n - 1\)</li>
+                <li>\(L\) is symmetric, semi-definite</li>
+                <li>Define the pseudoinverse of \(L\) as \(L ^ + \). \(L = \sum_{i = 1}^{n - 1} \lambda_i u_i u_i ^ T\), then 
+                  \(L^ + = \sum_{i = 1}^{n - 1} \frac{1}{\lambda_i} u_i u_i ^ T\).</li>
+                <li> \(L ^ + L = L L ^ + = \sum_{i = 1}^{n - 1} u_i u_i ^ T\). PROJECTION onto the span of the nonzero eigenvectors of \(L\). \(LL^+\) is identity on \(img(L) = img(L^+) = span(1) ^ \perp\) </li>
+              </ul>
+            </div>
           </li>
           <li>
-            <b>Projection Matrix \(\Pi\)</b> \(\Pi = B L ^ + B^T\)
-            <ul>
-              <li> \(img(\Pi) \subseteq img(B)\) </li>
-              <li>\(img(\Pi) \supseteq img(B)\). For \( \forall y \in img(B)\), \(\exists x \in span(1) ^ \perp\) s.t. \(y = Bx\). Now consider \(\Pi Bx = B L ^ + B^T Bx = B L ^ + L x = Bx = y\), thus \(\Pi\) is actually a projection onto \(img(B)\) and \(img(\Pi) = img(B)\) (it's easy to verify that \(\Pi\Pi = \Pi\)).</li>
-              <li> As \(\Pi\) is a projection onto a space of \(dim = n - 1\), thus \(\Pi\) has exactly \(n - 1\) eigenvalues equal to 1, and one eigenvalue equal to 0. </li>
-              <li> \(trace(\Pi) = n - 1\), thus the sum of all effective resistances across edges of a graph is \(n  - 1\). </li>
-              <li> \(\Pi\) is symmetric, and has it's \(e'\)th diagonal entry equal to \(R_e\).</li>
-            </ul>
+            <div class = "definition" >
+              <b>Projection Matrix \(\Pi\)</b> \(\Pi = B L ^ + B^T\)
+            </div>
+            <div>
+              <ul>
+                <li> \(img(\Pi) \subseteq img(B)\) </li>
+                <li>\(img(\Pi) \supseteq img(B)\). For \( \forall y \in img(B)\), \(\exists x \in span(1) ^ \perp\) s.t. \(y = Bx\). Now consider \(\Pi Bx = B L ^ + B^T Bx = B L ^ + L x = Bx = y\), thus \(\Pi\) is actually a projection onto \(img(B)\) and \(img(\Pi) = img(B)\) (it's easy to verify that \(\Pi\Pi = \Pi\)).</li>
+                <li> As \(\Pi\) is a projection onto a space of \(dim = n - 1\), thus \(\Pi\) has exactly \(n - 1\) eigenvalues equal to 1, and one eigenvalue equal to 0. </li>
+                <li> \(trace(\Pi) = n - 1\), thus the sum of all effective resistances across edges of a graph is \(n  - 1\). </li>
+                <li> \(\Pi\) is symmetric, and has it's \(e'\)th diagonal entry equal to \(R_e\).</li>
+              </ul>
+            </div>
           </li>
         </ul>
 
       <h3 class = "sec"> Main result </h3>
-        The algorithm output a new graph \(H\). Define a <b>diagonal matrix</b> \(S\). \(S\) is of size \(|E| \times |E|\), with diagonal entry \(S_{e, e} = \frac{d_e}{qp_e}\) (\(d_e\) is the number of times edge \(e\) was sampled).
-        <ul>
-          <li>\(E[S] = I_m\)</li>
-          <li>Graph Laplacian for \(H\) is \(L_H = B^T S B\), then \(E[L_H] = L_G\) (Here need to define weighted incidence matrix.)</li>
-          <li>\(\Pi_H \neq \Pi S \Pi\)(not a projection) but if \(\Pi S \Pi\) is close to \(\Pi \Pi\), we can then prove that \(L_H\) is relatively close to \(L_G\). </li>
-        </ul>
+        <div>
+          The algorithm output a new graph \(H\). Define a <b>diagonal matrix</b> \(S\). \(S\) is of size \(|E| \times |E|\), with diagonal entry \(S_{e, e} = \frac{d_e}{qp_e}\) (\(d_e\) is the number of times edge \(e\) was sampled).
+        </div>
+        <div>
+          <ul>
+            <li>\(E[S] = I_m\)</li>
+            <li>Graph Laplacian for \(H\) is \(L_H = B^T S B\), then \(E[L_H] = L_G\) (Here need to define weighted incidence matrix.)</li>
+            <li>\(\Pi_H \neq \Pi S \Pi\)(not a projection) but if \(\Pi S \Pi\) is close to \(\Pi \Pi\), we can then prove that \(L_H\) is relatively close to \(L_G\). </li>
+          </ul>
+        </div>
     <h2> Reference </h2>
       <ul>
         <li><a href = "http://web.stanford.edu/class/cme305/Notes/14.pdf" >CME 305 Lecture Notes </a></li>
