fix p line-height

--- a/_posts/2015-3-26-matching.html
+++ b/_posts/2015-3-26-matching.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 tag: Algorithm
-excerpt: 
+excerpt: Maximum Matching problem is interesting and maximum bipartite problem is relatively easy to tackle with. Matching a couple of single women and single men is actually a bipartite matching problem!
 ---
 
 <html>
