--- a/_posts/2015-3-26-matching.html
+++ b/_posts/2015-3-26-matching.html
@@ -73,8 +73,10 @@ excerpt: Maximum Matching problem is interesting and maximum bipartite problem i
     </div>
 
     <h2>References</h2>
-    <div><a href="http://en.wikipedia.org/wiki/Matching_%28graph_theory%29">Matching (graph theory), wikipedia</a></div>
-    <div><a href="http://www.cs.dartmouth.edu/~ac/Teach/CS105-Winter05/Notes/kavathekar-scribe.pdf">Lecture Notes @ dartmouth.edu</a></div>
-    <div><a href=""></a></div>
+    <ul>
+      <li><a href="http://en.wikipedia.org/wiki/Matching_%28graph_theory%29">Matching (graph theory), wikipedia</a></li>
+      <li><a href="http://www.cs.dartmouth.edu/~ac/Teach/CS105-Winter05/Notes/kavathekar-scribe.pdf">Lecture Notes @ dartmouth.edu</a></li>
+      <li><a href=""></a></li>
+    </ul>
   </body>
 </html>
