--- a/_posts/2015-3-29-totally-unimodular.html
+++ b/_posts/2015-3-29-totally-unimodular.html
@@ -75,8 +75,8 @@ excerpt: In the general case, Integer Programming Problem is NP-complete. Howeve
       The <i>Linear Programming relaxation</i> of the matching problem is (the original problem restricts \(x\) to be either 0 or 1)
       \[
         \begin{split}
-        \max &{\mathbf{1}^T x} \\
-        \text{s.t. } &Ax \le \mathbf{1}\\
+        \max &{\text{ }1^T x} \\
+        \text{s.t. } &Ax \le 1\\
         & x \ge 0
         \end{split}
       \]
@@ -86,7 +86,7 @@ excerpt: In the general case, Integer Programming Problem is NP-complete. Howeve
       \[
         \begin{split}
           \min & {\text{ } 1 ^T y} \\
-          \text{s.t. } & A^T y \ge \mathbf{1}\\
+          \text{s.t. } & A^T y \ge 1\\
           & y \ge 0
         \end{split}
       \]
