add reference; needs to padding tags in archieve

--- a/_posts/2015-4-2-ray-intersection.html
+++ b/_posts/2015-4-2-ray-intersection.html
@@ -69,5 +69,16 @@ excerpt: Ray intersection is a very basic problem in computer graphics. In the r
       <p>
         This is a special case of Ray-Convex Polyhedron intersection problem. But for 3D triangles, we could use a more basic observation to solve the problem. The three vertexes (vectors) of a triangle actually form a basis of 3D space. Now represent an arbitrary direction vector of the ray in this basis. If all the coordinates are positive, then the ray intersects with the triangle. A fast algorithm using this idea is <a href="http://en.wikipedia.org/wiki/M%C3%B6ller%E2%80%93Trumbore_intersection_algorithm">Moller-Trumbore algorithm </a>
       </p>
+
+    <h2>References</h2>
+    <p>
+      <ul>
+        <li><a href="http://en.wikipedia.org/wiki/Intersection_of_a_polyhedron_with_a_line">Intersection of a polyhedron with a line, wikipedia</a>
+        </li>
+        <li>
+          <a href="http://geomalgorithms.com/a13-_intersect-4.html">Intersect a Segment & a Convex Polygon</a>
+        </li>
+      </ul>
+    </p>
   </body>
 </html>
