--- a/_posts/2015-5-8-maximum-likelihood-estimation.html
+++ b/_posts/2015-5-8-maximum-likelihood-estimation.html
@@ -73,7 +73,7 @@ excerpt: Maximum Likelihood Estimation is a very common and useful tool to estim
         </p>
 
 
-    <h2>References</h2>
+<!--     <h2>References</h2>
     <p>
       <ul>
         <li><a href="http://en.wikipedia.org/wiki/Intersection_of_a_polyhedron_with_a_line">Intersection of a polyhedron with a line, wikipedia</a>
@@ -82,6 +82,6 @@ excerpt: Maximum Likelihood Estimation is a very common and useful tool to estim
           <a href="http://geomalgorithms.com/a13-_intersect-4.html">Intersect a Segment & a Convex Polygon</a>
         </li>
       </ul>
-    </p>
+    </p> -->
   </body>
 </html>
